Small spacing fixes and css search fix

--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -39,8 +39,7 @@
   @extend .btn;
 }
 
-.cse .gsc-search-button input.gsc-search-button-v2,
-  input.gsc-search-button-v2 {
+input.gsc-search-button input.gsc-search-button-v2 {
   width: 28px !important;
   height: 26px !important;
   padding: 4px !important;
